# ZeroKV

./: .gitignore  README.md  go.mod
cmd/: main.go
csrc/: CMakeLists.txt  connector.cc  connector.h  shm_allocator.cc  shm_allocator.h  uds_client.cc  uds_client.h
internal/coordinator/: consistent_hash.go  control_plane.go  grpc_api.go  membership.go  radix_tree.go  router.go  state_machine.go
internal/distributed/: accelerator.go  local_lru.go  store.go
internal/ipc/: shm_mapper.go  uds_server.go
internal/network/: p2p_client.go  zerocopy_tcp.go
internal/storage/: disk_tier.go  evict.go  handler.go  offheap_pool.go  shared_memory_pool.go
pkg/logger/: logger.go
pkg/protocol/: codec.go
proto/: control_plane.proto
proto/controlplane/: control_plane.pb.go  control_plane_grpc.pb.go
